# sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bench_prearm.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/incidentary/: __init__.py  auto_instrument.py  client.py  context.py  downstream_edge_key.py  ids.py  middleware.py  prearm_triggers.py  ring_buffer.py  serverless.py  trace_cap.py  track_deploy.py  transport.py  types.py
src/incidentary/integrations/: __init__.py  aiohttp_integration.py  asyncpg_integration.py  base.py  celery.py  django.py  flask.py  grpc_integration.py  http.py  httpx_integration.py  kombu.py  psycopg2_integration.py  registry.py
tests/: test_adaptive_batch.py  test_aiohttp_integration.py  test_asgi_middleware.py  test_asyncpg_integration.py  test_auto_instrument.py  test_capture_mode_header.py  test_celery_integration.py  test_client.py  test_context.py  test_django_integration.py  test_downstream_edge_key.py  test_flask_integration.py  test_grpc_integration.py  test_httpx_integration.py  test_ids.py  test_integration_registry.py  test_kombu_integration.py  test_middleware.py  test_prearm_triggers.py  test_psycopg2_integration.py  test_ring_buffer.py  test_serverless.py  test_trace_cap.py  test_trace_cap_client.py  test_track_deploy.py  test_transport.py
