[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incidentary"
version = "0.2.0"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Incidentary Python SDK"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/incidentary"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
