[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "incidentary"
version = "0.2.0"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Incidentary Python SDK"
authors = [{ name = "Ahmed Adly" }]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://incidentary.com"
Repository = "https://github.com/incidentary/sdk-python"
Documentation = "https://docs.incidentary.com"
Changelog = "https://github.com/incidentary/sdk-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/incidentary"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
